# gossipers

./: Cargo.toml  DESIGN.md  README.md  justfile
src/: cli.rs  lib.rs  main.rs  neighborhood.rs  neighbourhood.rs  node.rs
