[package]
name = "gossipers"
version = "0.1.0"
edition = "2021"
repository = "https://github.com/mikhailantoshkin/gossipers"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
clap = { version = "4.5", features = ["derive"] }
governor = "0.6.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0.115"
tokio = { version = "1.37.0", features = [
    "rt-multi-thread",
    "macros",
    "time",
    "net",
    "sync",
    "io-util",
] }
tokio-stream = { version = "0.1.15", features = ["full"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }

# The profile that 'cargo dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"

# Config for 'cargo dist'
[workspace.metadata.dist]
# The preferred cargo-dist version to use in CI (Cargo.toml SemVer syntax)
cargo-dist-version = "0.11.1"
# CI backends to support
ci = ["github"]
# The installers to generate for each app
installers = ["shell", "homebrew"]
# Target platforms to build apps for (Rust target-triple syntax)
targets = ["aarch64-apple-darwin", "x86_64-apple-darwin", "x86_64-unknown-linux-musl", "x86_64-pc-windows-msvc"]
# Publish jobs to run in CI
pr-run-mode = "plan"
